--- a/HW 15.11.21/index.html
+++ b/HW 15.11.21/index.html
@@ -11,9 +11,7 @@
       <a href="../HW 17.11.21/index_mendeleew.html">Таблица Менделеева...</a>
     </h2>
 </div>
-<div class="photo">
-    <img src="../HW 15.11.21/images/3.jpg" alt="Опаньки..." width="100%" height="500px">
-</div>
+    <div class="photo"><img src="../HW 15.11.21/images/3.jpg" alt="Опаньки..." width="100%" height="500px"></div>
 <div class="name">
     <h2>Балюра Андрей</h2>
 </div>
