--- a/HW 17.11.21/index_mendeleew.html
+++ b/HW 17.11.21/index_mendeleew.html
@@ -128,8 +128,8 @@
             </td>
             <td>
                 <div class="Yollow">
-                    <a href="https://ru.wikipedia.org/wiki/Галий" target="_blank">Ga</a>
-                    <div class="name">Галий</div>
+                    <a href="https://ru.wikipedia.org/wiki/Галлий" target="_blank">Ga</a>
+                    <div class="name">Галлий</div>
                     <div class="number">31</div>
                     <div class="mass">69,72</div>
                 </div>
